test/parse/module/bad-memory-init-size.txt
;;; ERROR: 1
(module (memory foo))
(;; STDERR ;;;
out/test/parse/module/bad-memory-init-size.txt:2:17: unexpected token "foo"
(module (memory foo))
                ^^^
out/test/parse/module/bad-memory-init-size.txt:2:20: syntax error, unexpected ), expecting ( or NAT
(module (memory foo))
                   ^
;;; STDERR ;;)
